--- a/pquotes/src/App.css
+++ b/pquotes/src/App.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Spectral&display=swap');
+
+html {
+  background-color: #FFE4C4;
+}
+
 .App {
   text-align: center;
+  vertical-align: center;
 }
 
 .App-logo {
@@ -19,4 +26,18 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.quote {
+  font-family: 'Spectral', serif;
+  font-size: 4rem;
+  margin-top: 12%;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.author {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 3rem;
+  margin-left: 35%;
 }
